# ohmybug

./: .gitignore  README-ko.md  README.md
OhMyBugApp/: Package.swift  build-app.sh
OhMyBugApp/OhMyBugApp/: ContentView.swift  OhMyBugAppMain.swift  Theme.swift
OhMyBugApp/OhMyBugApp/Resources/: AppIcon.icns
OhMyBugApp/OhMyBugApp/ViewModels/: AppSettings.swift  AppViewModel.swift
OhMyBugApp/OhMyBugApp/Views/: LogView.swift  PhaseIndicator.swift  ProjectDropZone.swift  ResultsDashboard.swift  ScanReportView.swift  SettingsPanel.swift
OhMyBugCore/: Package.swift
OhMyBugCore/Sources/OhMyBugCLI/: OhMyBugCLI.swift
OhMyBugCore/Sources/OhMyBugCore/Fixers/: AIFixer.swift  LLMClient.swift
OhMyBugCore/Sources/OhMyBugCore/Models/: FixResult.swift  Issue.swift  LogEntry.swift  PipelineReport.swift  ProjectConfig.swift  ScanPhase.swift  ScanResult.swift  Severity.swift
OhMyBugCore/Sources/OhMyBugCore/Pipeline/: PipelineEngine+Registration.swift  PipelineEngine.swift
OhMyBugCore/Sources/OhMyBugCore/Scanners/: BuildChecker.swift  DartAnalyzerScanner.swift  DartFormatScanner.swift  ESLintScanner.swift  FlutterAnalyzerScanner.swift  PrettierScanner.swift  RuffFormatScanner.swift  RuffScanner.swift  ScannerProtocol.swift  SwiftFormatScanner.swift  (+1 more)
OhMyBugCore/Tests/OhMyBugCoreTests/: ModelTests.swift
OhMyBugWindows/: README.md  index.html  package-lock.json  package.json  vite.config.ts
OhMyBugWindows/src/: App.tsx  styles.css
OhMyBugWindows/src-tauri/: Cargo.toml  tauri.conf.json
OhMyBugWindows/src-tauri/icons/: icon.icns
OhMyBugWindows/src-tauri/src/: main.rs
(+9 files in other folders)
